# obsidian-capsule-delivery

./: .flake8  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
capsule/: __init__.py  __main__.py  cli.py  exceptions.py
capsule/models/: capsule.py
docs/: index.md  installation.md  usage.md
tests/: __init__.py  conftest.py  test_obsidian_capsule_delivery.py
tests/test_models/: test_capsule.py
