[project]
name = "obsidian-capsule-delivery"
version = "0.1.0"
description = "obsidian capsule delivery"
readme = "README.md"
authors = [
  {name = "Shuma", email = "lars.ladewig@gmail.com"}
]
maintainers = [
  {name = "Shuma", email = "lars.ladewig@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer[all]>=0.9.0",
  "python-frontmatter>=1.0.0",
  "ruamel.yaml>=0.17.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "google-generativeai>=0.3.0"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pytest-mock>=3.10"
]

[project.urls]
bugs = "https://github.com/BigSpoon33/obsidian_capsule_delivery/issues"
changelog = "https://github.com/BigSpoon33/obsidian_capsule_delivery/blob/master/changelog.md"
homepage = "https://github.com/BigSpoon33/obsidian_capsule_delivery"

[project.scripts]
ocds = "capsule.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "^build/",
    "^dist/",
]
